Fixed display errors (I only need your help because I don't know what to do with icons from social media because when zooming the screen they overlap the text, I tried z-index, inline-block, or rebuild the html structure so that it doesn't overlap, it doesn't help :( what else I did as you ordered in the comments on github) Regards

--- a/CustomerManagementPanel/src/app/footer/footer.component.scss
+++ b/CustomerManagementPanel/src/app/footer/footer.component.scss
@@ -1,71 +1,49 @@
-// .cointeiner{
-
-//     color: white;
-//     top: 0;
-//     height: 150px;
-//     background: rgb(51,174,233);
-//     background: linear-gradient(0deg, rgba(51,174,233,1) 100%, rgba(255,247,229,1) 100%);
-//     font-size: 18px;
-// }
-// .header-by{
-//     align-self: center;
-//     top: 10%;
-// }
-
-// .header-by-row {
-// align-items: center;
-// align-content: center;
-// margin-left: auto;
-// width: 50%;
-// margin: auto;
-// }
-// .media{
-//     position: relative;
-//     left: 200px;
-//     top: -50px;
-// }
-// .logo{
-//     position: relative;
-//     left: 350%;
-//     font-size: 30px;
-//     padding-right: 10%;
-// }
 .cointeiner{
     color: white;
     background: rgb(51,174,233);
     background: linear-gradient(0deg, rgba(51,174,233,1) 100%, rgba(255,247,229,1) 100%);  
-    font-size: 24px;
-    height: 21vh;
+    height: 200px;
+    width: 100%;
+    margin: auto;
 }
 
 .header-by{
     position: absolute;
     font-size: 35px;
-    top: 10%;
+    top: 3%;
     left: 0;
     right: 0;
     text-align: center;
 }
 
-.col-md-6{
-    bottom: -80px;
+.case{
+    top: 80px;
+}
+
+.case-media{
+    display: inline-block;
+    text-align: center;
+    top: 80px;
 }
 
 .media{
     position: absolute;
-    left: 22%;
-    top: 50%;
+    float: left;
+    left: 45%;
+    top: 55%;
+    z-index: 1;
 }
 
-.logo{
+.media-icons{
     position: relative;
-    font-size: 60px;
+    font-size: 58px;
     padding: 10px;
-    left: 66%;
+    left: 75%;
+    float: left;
+    z-index: 1;
 }
 
 a{
-    font-size: 18px;
     text-decoration: none;
     color: white;
 }
@@ -80,3 +58,61 @@ a:hover{
     left: 5%;
     top: 40%;
 }
+
+
+//WERSJA NA TELEFON
+
+// @media (min-width: 375px) {
+//     .cointeiner{
+//         color: white;
+//         background: rgb(51,174,233);
+//         background: linear-gradient(0deg, rgba(51,174,233,1) 100%, rgba(255,247,229,1) 100%);  
+//         height: 19vh;
+//     }
+    
+//     .header-by{
+//         position: absolute;
+//         font-size: 17px;
+//         top: 13%;
+//         left: 0;
+//         right: 0;
+//         text-align: center;
+//     }
+    
+//     .case{
+//         top: 40px;
+//     }
+    
+//     .media{
+//         visibility: hidden;
+//         font-size: 14px;
+//         position: absolute;
+//         left: 27%;
+//         top: 60%;
+//     }
+    
+//     .media-icons{
+//         position: relative;
+//         font-size: 20px;
+//         padding: 10px;
+//         left: 70%;
+//         top: 80%;
+//     }
+    
+//     a{
+//         text-decoration: none;
+//         color: white;
+//     }
+    
+//     a:hover{
+//         color: #000;
+//         transition: color .5s;
+//     }
+    
+//     .contact{
+//         font-size: 13px;
+//         position: relative;
+//         left: 5%;
+//         top: 120%;
+//     }
+// }
